@@ -1,3 +1,7 @@
+2020-03-18  Allen D. Ball  <ball@hcf.dev>
+
+	* roles/yum-repo-mysql-community-release: Initial writing.
+
 2020-03-15  Allen D. Ball  <ball@hcf.dev>
 
 	* roles/centos, roles/nfs-exports: Initial writing.
